# cool-lang

./: .gitignore  CMakeLists.txt  GEMINI.md  INTEGRATION_TEST_SUMMARY.md  README.md  TEST_SUITE_OVERVIEW.md  test.cool  test_channel.cool  test_exe  test_spawn  test_spawn.cool
compiler/: BUILD.md  CMakeLists.txt  COOL.BOX.MD  ITERATOR.md  LINKING.md  MILESTONE2.md  POLYMORPHISM.md  SETUP.md
compiler/src/: CMakeLists.txt  main.cpp
compiler/src/codegen/: MLIRGenerator.cpp  MLIRGenerator.h
compiler/src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
compiler/src/parser/: AST.h  Parser.cpp  Parser.h
compiler/src/semantics/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.h  Type.h
compiler/tests/: CMakeLists.txt  test.cool  test_codegen.cpp  test_fn_keyword.cpp  test_integration.cpp  test_lexer.cpp  test_parser.cpp  test_semantics.cpp
compiler/tests/execution_verification/: CMakeLists.txt  TestFramework.h  exec_test_add53.cool  exec_test_chain.cool  exec_test_combined.cool  exec_test_const42.cool  exec_test_iffalse.cool  exec_test_iftrue.cool  exec_test_integration1.cool  exec_test_integration2.cool  exec_test_integration3.cool  exec_test_loopmath.cool  exec_test_multifunc.cool  exec_test_nested.cool  exec_test_struct.cool  exec_test_whileloop.cool  test_execution_real.cpp
compiler/tests/mlir_verification/: CMakeLists.txt  TestFramework.h  feature_basic_function.cool  feature_complex_integration.cool  feature_function_calls.cool  feature_spawn_task.cool  feature_struct_definition.cool  feature_variables_arithmetic.cool  feature_while_loop.cool  test_runner.cpp
docs/: APPENDIX.md  CHANGELOG_fn_keyword.md  SPEC_OVERVIEW.md
docs/examples/: BASIC.md
docs/guides/: BUILDING.md
docs/internals/: BUG_REPORT_TEMPLATE.md  BUILD_GUIDE.md  DEBUGGING.md  TESTING.md
docs/internals/compiler/: BOXING_IMPL.md  GENERICS_IMPL.md  MLIR_DIALECT.md  OWNERSHIP_ANALYSIS.md
docs/internals/runtime/: CHANNELS.md  INTERFACE.md
docs/plans/: BUILD_ORCHESTRATION.md  MASTER_PLAN.md  MILESTONE_1.md  MILESTONE_3.md
docs/spec/: TOOLCHAIN.md
docs/spec/core/: DEFINITION.md  MODULES.md
docs/spec/features/: ITERATORS.md
docs/spec/grammar/: PEG.md  STYLE.md
docs/spec/stdlib/: OVERVIEW.md  STRINGS.md
docs/tracking/: DASHBOARD.md  GOLDEN_TESTS.md  TRACKING.md
runtime/: CMakeLists.txt
runtime/include/: cool_runtime.h
runtime/src/: runtime.c
spec/: IMPLEMENTATION_DASHBOARD.md  MODULES.md  STD_LIB.md  STRINGS.md
